# RVS

./: .gitignore  Analysis of extrinsics problem of SVS 3DoFp.docx  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.Philips  Readme.md  compute_job  compute_wspsnrs  example  z_value_DERS.txt  ~$alysis of extrinsics problem of SVS 3DoFp.docx
ClassroomVideo/: ClassroomVideo-IntermediateViews.json  ClassroomVideo-SVS-v0_to_p0.cfg  ClassroomVideo-SVS-v7v8_to_i0.cfg  ClassroomVideo-VSRS-v7v8_to_i0.cfg  ClassroomVideo-camparams.txt  ClassroomVideo.json  depth_range.txt
TechnicolorHijack/: TechnicolorHijack-IntermediateViews.json  metadata.json
TechnicolorMuseum/: TechnicolorMuseum-IntermediateViews.json  metadata.json
config_files/: ClassroomVideo-SVS-v0_to_v0.cfg  ClassroomVideo-SVS-v7v8_to_v0.cfg  ClassroomVideo-SVS-v7v8_to_v0_270deg.cfg  ClassroomVideo-SVS-v7v8_to_v0_OpenGL.cfg  ClassroomVideo.json  TechnicoloMuseum-SVS-v0v2v13v17v19_to_v1.cfg  TechnicoloMuseum-SVS-v0v2v13v17v19_to_v1_OpenGL.cfg  TechnicoloMuseum-SVS-v5_to_v6.cfg  TechnicolorHijack-SVS-v1v4_to_v9.cfg  TechnicolorHijack-SVS-v1v4_to_v9_OpenGL.cfg  TechnicolorHijack.json  TechnicolorMuseum-SVS-v5_to_v5.cfg  TechnicolorMuseum-posetrace.cfg  TechnicolorMuseum.json  ULB_Unicorn.json  Unicorn_10b.cfg  Unicorn_Same_View.cfg  Unicorn_Squares_Simple.cfg  Unicorn_Triangles_MultiSpectral.cfg  Unicorn_Triangles_Simple.cfg  Unicorn_Triangles_Simple_OpenGL.cfg  Unicorn_Triangles_Simple_ToErp.cfg  example_config_file.cfg  example_config_file.json  poses_museum_0.csv
config_files/ClassroomVideo/: A1-iv-SVS-i0.txt  A1-iv-SVS-i1.txt  A1-iv-SVS-i2.txt  A1-iv-SVS-i3.txt  A1-iv-SVS-i4.txt  A1-iv-SVS-i5.txt  A1-iv-SVS-i6.txt  A1-iv-SVS-i7.txt  A1-iv-SVS.txt  A1-sv-SVS-v0.txt  A1-sv-SVS-v1.txt  A1-sv-SVS-v10.txt  A1-sv-SVS-v11.txt  A1-sv-SVS-v12.txt  A1-sv-SVS-v13.txt  A1-sv-SVS-v14.txt  A1-sv-SVS-v2.txt  A1-sv-SVS-v3.txt  A1-sv-SVS-v4.txt  A1-sv-SVS-v5.txt  A1-sv-SVS-v6.txt  A1-sv-SVS-v7.txt  A1-sv-SVS-v8.txt  A1-sv-SVS-v9.txt  A1-sv-SVS.txt  A1-sv-camparams.txt  A2-iv-SVS-i0.txt  A2-iv-SVS-i1.txt  A2-iv-SVS-i2.txt  A2-iv-SVS-i3.txt  A2-iv-SVS-i4.txt  A2-iv-SVS-i5.txt  A2-iv-SVS-i6.txt  A2-iv-SVS-i7.txt  A2-iv-SVS.txt  A2-sv-SVS-v0.txt  A2-sv-SVS-v1.txt  A2-sv-SVS-v10.txt  A2-sv-SVS-v11.txt  A2-sv-SVS-v12.txt  (+130 more)
config_files/TechnicolorHijack/: C1-iv-SVS-i0.txt  C1-iv-SVS-i1.txt  C1-iv-SVS-i10.txt  C1-iv-SVS-i11.txt  C1-iv-SVS-i12.txt  C1-iv-SVS-i13.txt  C1-iv-SVS-i14.txt  C1-iv-SVS-i2.txt  C1-iv-SVS-i3.txt  C1-iv-SVS-i4.txt  C1-iv-SVS-i5.txt  C1-iv-SVS-i6.txt  C1-iv-SVS-i7.txt  C1-iv-SVS-i8.txt  C1-iv-SVS-i9.txt  C1-iv-SVS.txt  C1-sv-SVS-v0.txt  C1-sv-SVS-v1.txt  C1-sv-SVS-v2.txt  C1-sv-SVS-v3.txt  C1-sv-SVS-v4.txt  C1-sv-SVS-v5.txt  C1-sv-SVS-v6.txt  C1-sv-SVS-v7.txt  C1-sv-SVS-v8.txt  C1-sv-SVS-v9.txt  C1-sv-SVS.txt  C1-sv-camparams.txt  C2-iv-SVS-i0.txt  C2-iv-SVS-i1.txt  C2-iv-SVS-i10.txt  C2-iv-SVS-i11.txt  C2-iv-SVS-i12.txt  C2-iv-SVS-i13.txt  C2-iv-SVS-i14.txt  C2-iv-SVS-i2.txt  C2-iv-SVS-i3.txt  C2-iv-SVS-i4.txt  C2-iv-SVS-i5.txt  C2-iv-SVS-i6.txt  (+147 more)
config_files/TechnicolorMuseum/: B1-iv-SVS-i0.txt  B1-iv-SVS-i1.txt  B1-iv-SVS-i10.txt  B1-iv-SVS-i11.txt  B1-iv-SVS-i12.txt  B1-iv-SVS-i13.txt  B1-iv-SVS-i14.txt  B1-iv-SVS-i15.txt  B1-iv-SVS-i16.txt  B1-iv-SVS-i17.txt  B1-iv-SVS-i18.txt  B1-iv-SVS-i19.txt  B1-iv-SVS-i2.txt  B1-iv-SVS-i3.txt  B1-iv-SVS-i4.txt  B1-iv-SVS-i5.txt  B1-iv-SVS-i6.txt  B1-iv-SVS-i7.txt  B1-iv-SVS-i8.txt  B1-iv-SVS-i9.txt  B1-iv-SVS.txt  B1-sv-SVS-v0.txt  B1-sv-SVS-v1.txt  B1-sv-SVS-v10.txt  B1-sv-SVS-v11.txt  B1-sv-SVS-v12.txt  B1-sv-SVS-v13.txt  B1-sv-SVS-v14.txt  B1-sv-SVS-v15.txt  B1-sv-SVS-v16.txt  B1-sv-SVS-v17.txt  B1-sv-SVS-v18.txt  B1-sv-SVS-v19.txt  B1-sv-SVS-v2.txt  B1-sv-SVS-v20.txt  B1-sv-SVS-v21.txt  B1-sv-SVS-v22.txt  B1-sv-SVS-v23.txt  B1-sv-SVS-v3.txt  B1-sv-SVS-v4.txt  (+281 more)
config_files/_integration_tests/: ClassroomVideo-SVS-v0_to_v0.cfg  ClassroomVideo-SVS-v0_to_v0.json  ClassroomVideo-SVS-v7v8_to_v0.json  ClassroomVideo-SVS-v7v8_to_v0_270deg.json  ClassroomVideo-v0_to_v0.json  ClassroomVideo-v7v8_to_v0.json  ClassroomVideo-v7v8_to_v0_270deg.json  ClassroomVideo-v7v8_to_v0_OpenGL.json  TechnicolorHijack-BlendByMax.cfg  TechnicolorHijack-BlendByMax.json  TechnicolorHijack-SVS-v1v4_to_v9.cfg  TechnicolorHijack-SVS-v1v4_to_v9.json  TechnicolorHijack-SVS-v1v4_to_v9_OpenGL.json  TechnicolorHijack-v1v4_to_v9.json  TechnicolorHijack-v1v4_to_v9_OpenGL.json  TechnicolorMuseum-PoseTrace.csv  TechnicolorMuseum-PoseTrace.json  TechnicolorMuseum-SVS-v0_to_v0.cfg  TechnicolorMuseum-SVS-v0v2v13v17v19_to_v1_OpenGL.json  TechnicolorMuseum-SVS-v5_to_v6.cfg  TechnicolorMuseum-translucency-inverse.json  TechnicolorMuseum-translucency.json  TechnicolorMuseum-v0_to_v0.json  TechnicolorMuseum-v0v2v13v17v19_to_v1.json  TechnicolorMuseum-v5_to_v5.json  TechnicolorMuseum-v5_to_v6.json  Unicorn_Same_View.json  Unicorn_Triangles_MultiSpectral.json  Unicorn_Triangles_Simple.json  Unicorn_Triangles_Simple_OpenGL.json
extra/: EulerAnglesToRotationMatrix.m  JSON_to_SVS.m  JSON_to_SVS_N17618.m  JSON_to_SVS_and_VSRS.m  JSON_to_SVS_and_VSRS_N17618.m  JSON_to_VSRS.py  Study_of_TechnicolorMuseum_configurations.m  VSRS_to_JSON.m  VSRS_to_JSON.py  compute_job  compute_wspsnrs  example  generate_CTC.py  generate_pngs
src/: Analyzer.cpp  Analyzer.hpp  Application.cpp  Application.hpp  BlendedView.cpp  BlendedView.hpp  Config.cpp  Config.hpp  EquirectangularProjection.cpp  EquirectangularProjection.hpp  EquirectangularProjector.cpp  EquirectangularProjector.hpp  EquirectangularUnprojector.cpp  EquirectangularUnprojector.hpp  IntegralImage2D.h  JsonParser.cpp  JsonParser.hpp  Parameters.cpp  Parameters.hpp  Parser.cpp  Parser.hpp  PerspectiveProjector.cpp  PerspectiveProjector.hpp  PerspectiveUnprojector.cpp  PerspectiveUnprojector.hpp  Pipeline.cpp  Pipeline.hpp  PolynomialDepth.cpp  PolynomialDepth.hpp  PoseTraces.cpp  PoseTraces.hpp  Projector.cpp  Projector.hpp  RFBO.cpp  RFBO.hpp  Shader.cpp  Shader.hpp  SpaceTransformer.cpp  SpaceTransformer.hpp  SynthesizedView.cpp  (+30 more)
